--- a/index.html
+++ b/index.html
@@ -1,63 +1,115 @@
-<!DOCTYPE html>
-<html>
-<head>
-
-<meta charset="utf-8" />
-<title>Sidewalk Widths NYC</title>
-<meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
-
-<meta property="og:title" content="Sidewalk Width NYC" />
-<meta property="og:image" content="https://sidewalkwidths.nyc/assets/sidewalkwidths_nyc.jpg" />
-<meta property="og:url" content="https://www.sidewalkwidths.nyc" />
-<meta property="og:description" content="Sidewalk Widths NYC is an interactive map that allows you to explore New York City's sidewalks relative to how good they are for social distancing." />
-
-<link rel='icon' href='favicon.ico?' type='image/x-icon'/ >
-<script src="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.js"></script>
-<link href="https://api.mapbox.com/mapbox-gl-js/v1.9.1/mapbox-gl.css" rel="stylesheet" />
-<link rel="stylesheet" type="text/css" href="css/styles.css"></link>
-
-</head>
-<body>
-
-	<div id="menu">
-		<button id="info-button" class="button circle-button" onclick="toggleInfo()">
-			<img src="./assets/logo.png"></img>
-		</button>
-
-		<button id="legend-button" class="button circle-button" onclick="toggleLegend()">
-			<img src="./assets/legend.png"></img>
-		</button>
-	</div>
-
-  <div id="info" class="window" style="display: block;">
-    <div class="window-content">
-      <h3>Welcome to</h3>
-      <h1>Sidewalk Widths NYC</h1>
-      <p>This map is intended to give an impression of how sidewalk widths impact the ability of pedestrians to practice social distancing. Widths were determined from <a href="https://data.cityofnewyork.us/City-Government/Sidewalk/vfx9-tbb6">New York City's Sidewalk dataset</a> which was not verfied for accuracy or completeness.</p>
-			<p>To learn more about how this dataset was produced, visit the <a href="https://www.github.com/meliharvey/sidewalkwidths-nyc">GitHub page</a>.</p>
-      <p><small>DISCLAIMER<br>
-      Do not use this map to make decisions that impact your health or safety. Other important factors like sidewalk obstructions and pedestrian activity are not accounted for in this dataset.</small></p>
-    </div>
-    <div class="close-window" onclick="toggleInfo()">
-      <button class="button">Explore the Map</button>
-    </div>
-  </div>
-
-	<div id="legend-window" class="window" style="display: none;">
-		<div class="window-content">
-			<h1>Legend</h1>
-			<ul id="legend-main" class="legend">
-			</ul>
-		</div>
-		<div class="close-window" onclick="toggleLegend()">
-			<button class="button">Return to map</button>
-		</div>
-	</div>
-
-  <div id="map"></div>
-
-	<script src="js/settings.js"></script>
-  <script src="js/app.js"></script>
-
-</body>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <link rel="stylesheet" href="./resources/ol.css">
+        <link rel="stylesheet" href="resources/fontawesome-all.min.css">
+        <link rel="stylesheet" href="./resources/ol3-layerswitcher.css">
+        <link rel="stylesheet" href="./resources/qgis2web.css">
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<style>
+.search-layer {
+  top: 100px;
+  left: .5em;
+}
+.ol-touch .search-layer {
+  top: 130px;
+}
+</style>
+        <style>
+        html, body {
+            background-color: #ffffff;
+        }
+        .ol-control button {
+            background-color: #f8f8f8 !important;
+            color: #000000 !important;
+            border-radius: 0px !important;
+        }
+        .ol-zoom, .geolocate, .gcd-gl-control .ol-control {
+            background-color: rgba(255,255,255,.4) !important;
+            padding: 3px !important;
+        }
+        .ol-scale-line {
+            background: none !important;
+        }
+        .ol-scale-line-inner {
+            border: 2px solid #f8f8f8 !important;
+            border-top: none !important;
+            background: rgba(255, 255, 255, 0.5) !important;
+            color: black !important;
+        }
+        </style>
+<style>
+.tooltip {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  color: white;
+  padding: 4px 8px;
+  opacity: 0.7;
+  white-space: nowrap;
+}
+.tooltip-measure {
+  opacity: 1;
+  font-weight: bold;
+}
+.tooltip-static {
+  background-color: #ffcc33;
+  color: black;
+  border: 1px solid white;
+}
+.tooltip-measure:before,
+.tooltip-static:before {
+  border-top: 6px solid rgba(0, 0, 0, 0.5);
+  border-right: 6px solid transparent;
+  border-left: 6px solid transparent;
+  content: "";
+  position: absolute;
+  bottom: -6px;
+  margin-left: -7px;
+  left: 50%;
+}
+.tooltip-static:before {
+  border-top-color: #ffcc33;
+}
+.measure-control {
+  top: 65px;
+  left: .5em;
+}
+.ol-touch .measure-control {
+  top: 80px;
+}
+</style>
+        <style>
+        html, body, #map {
+            width: 100%;
+            height: 100%;
+            padding: 0;
+            margin: 0;
+        }
+        </style>
+        <title></title>
+    </head>
+    <body>
+        <div id="map">
+            <div id="popup" class="ol-popup">
+                <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                <div id="popup-content"></div>
+            </div>
+        </div>
+        <script src="resources/qgis2web_expressions.js"></script>
+        <script src="resources/polyfills.js"></script>
+        <script src="./resources/functions.js"></script>
+        <script src="./resources/ol.js"></script>
+        <script src="./resources/ol3-layerswitcher.js"></script>
+        <script src="layers/sidewalkwidths_1.js"></script>
+        <script src="styles/sidewalkwidths_1_style.js"></script>
+        <script src="./layers/layers.js" type="text/javascript"></script> 
+        <script src="./resources/qgis2web.js"></script>
+        <script src="./resources/Autolinker.min.js"></script>
+    </body>
 </html>
